<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Google Play Games"
                        android:summary="Automatic upload on game over">
                        <CheckBoxPreference android:key="@string/pref_keepLogin"
                                            android:title="Upload score"
                                            android:defaultValue="true"
                                            android:summary="Automatic upload on game over"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Others">
                        <CheckBoxPreference android:key="@string/pref_donotshowAgain"
                                            android:title="Hide Login Dialog"
                                            android:summary="Hide dialog on game startup"/>
                        <!--<CheckBoxPreference android:key="@string/pref_rememberdiff"
                                            android:title="Remember my game difficulty"
                                            android:summary="Hide difficulty dialog on game startup"/>-->
    </PreferenceCategory>
    <Preference android:key="@string/pref_reset"
                android:title="Reset"
                android:summary="Press to reset statistics"/>
    <Preference android:key="@string/pref_logout"
                android:title="Logout"
                android:defaultValue="false"
                android:summary="Press to logout out Google Play Games"/>


</PreferenceScreen>